--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
-.header{
-margin-top: 3vh;
+.header {
+  margin-top: 3vh;
   font-size: xx-large;
-  color:darkgoldenrod
+  color: darkgoldenrod;
 }
